# cli

./: .gitignore  .goosarch  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  VERSION.txt  basic.mk  commands.go  flake.nix  go.mod  go.sum  homebrew-tap-template.rb  homebrew-template.rb  homebrew.sh  justfile  main.go  main.kcl  main_test.go  source.gltf  source.step  spec.json
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: add-issues-to-project.yml  cargo-build-stable.yml  cargo-clippy.yml  cargo-fmt.yml  cargo-test.yml  documentation-build.yml  flakehub.yml  generate-website-docs.yml  make-all.yml  make-cross.yml  make-image.yml  make-release.yml  nix.yml  win-ca-smoke.yml  windows-install-directions.yml
.github/workflows/lib/: upload-results.sh
cli-macro/: Cargo.toml
cli-macro-impl/: Cargo.toml
cli-macro-impl/src/: lib.rs
cli-macro-impl/tests/: tests.rs
cmd/alias/: alias.go
cmd/alias/delete/: delete.go  delete_test.go
cmd/alias/list/: list.go  list_test.go
cmd/alias/set/: set.go  set_test.go
cmd/api-call/: api-call.go
cmd/api-call/status/: status.go
cmd/auth/: auth.go
cmd/auth/login/: login.go  login_flow.go  login_test.go
cmd/auth/logout/: logout.go  logout_test.go
cmd/auth/status/: status.go  status_test.go
cmd/completion/: completion.go  completion_test.go
cmd/config/: config.go
cmd/config/get/: get.go  get_test.go
cmd/config/list/: list.go  list_test.go
cmd/config/set/: set.go  set_test.go
cmd/drake/: drake.go
cmd/file/: file.go
cmd/file/convert/: convert.go  convert_test.go
cmd/file/shared/: shared.go
cmd/file/status/: status.go
cmd/meta/: meta.go
cmd/meta/instance/: instance.go
cmd/meta/session/: session.go
cmd/open/: open.go
cmd/root/: help.go  help_reference.go  help_test.go  help_topic.go  root.go
cmd/version/: version.go
gen-docs/: main.go  main_test.go
internal/config/: alias_config.go  config.go  config_file.go  config_file_test.go  config_map.go  config_map_test.go  config_test.go  from_env.go  from_env_test.go  from_file.go  stub.go  testing.go
internal/docs/: markdown.go
internal/run/: stub.go
internal/update/: update.go
kittycad/: base64helpers.go  client.go  errors.go  helpers.go  kittycad.go  lib.go  paths.go  responses.go  types.go  utils.go  utils_test.go
pkg/aliases/expand/: expand.go  expand_test.go
pkg/cli/: cli.go  cli_test.go  http.go
pkg/cmdutil/: auth_check.go  auth_check_test.go  errors.go  file_input.go  host.go  json_flags.go  json_flags_test.go  table_printer.go  table_printer_test.go  terminal.go
scripts/: https-server.mjs  release-install-instructions.sh  test-windows-install-directions.ps1
src/: build_kcl_project.rs  cmd.rs  cmd_alias.rs  cmd_api.rs  cmd_api_call.rs  cmd_app.rs  cmd_auth.rs  cmd_completion.rs  cmd_config.rs  cmd_drake.rs  cmd_file.rs  cmd_generate.rs  cmd_kcl.rs  cmd_kittysay.rs  cmd_open.rs  cmd_org.rs  cmd_project.rs  cmd_say.rs  cmd_start_session.rs  cmd_update.rs  cmd_user.rs  cmd_version.rs  colors.rs  config.rs  config_alias.rs  config_file.rs  config_from_env.rs  config_from_file.rs  config_map.rs  context.rs  docs_man.rs  docs_markdown.rs  iostreams.rs  kcl_error_fmt.rs  main.rs  project.rs  prompt_ext.rs  tests.rs  types.rs  update.rs
src/cmd_kcl/: camera_angles.rs
src/cmd_ml/: cmd_kcl.rs  cmd_text_to_cad.rs  mod.rs
src/ml/: mod.rs
src/ml/copilot/: mod.rs  run.rs  state.rs  ui.rs  util.rs
tests/: gear.kcl  kcl_process.rs  man_pages_sub_sub_commands.txt  markdown_sub_commands.txt  non_fatal_error.kcl  output-2.gltf  output.gltf  output.step  parse_error.kcl  win_ca_smoke.rs
tests/assembly-edit/: main.kcl
tests/nested-settings/subdir/: gear.kcl
tests/parse_file_error/: main.kcl
tests/walkie-talkie/: antenna.kcl  body.kcl  button.kcl  case.kcl  globals.kcl  knob.kcl  main.kcl  talk-button.kcl  zoo-logo.kcl
tests/with-settings/: gear.kcl  project.toml
