[package]
name = "zoo"
version = "0.2.125"
edition = "2021"
build = "build.rs"

[workspace]
members = ["cli-macro", "cli-macro-impl"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
async-trait = "0.1.88"
base64 = "0.22.1"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
clap = { version = "4.5.35", features = [
  "cargo",
  "derive",
  "env",
  "unicode",
  "help",
  "wrap_help",
] }
clap_complete = { version = "4.5.58" }
cli-macro = { path = "cli-macro" }
colored_json = "4.1"
crossterm = { version = "0.28", features = ["event-stream"] }
data-encoding = "2.6.0"
dialoguer = "0.12.0"
dirs = "6"
futures = "0.3"
git_rev = "0.1.0"
heck = "0.5.0"
http = "1"
image = { version = "0.25", default-features = false, features = [
  "png",
  "jpeg",
] }
itertools = "0.14.0"
kcl-lib = { version = "=0.2.102", features = ["disable-println"] }
kcl-test-server = "=0.1.102"
kittycad = { version = "0.4.2", features = [
  "clap",
  "tabled",
  "requests",
  "retry",
] }
kittycad-modeling-cmds = { version = "=0.2.144", features = [
  "websocket",
  "convert_client_crate",
  "tabled",
] }
log = "0.4.28"
miette = { version = "7.5.0", features = ["fancy"] }
nu-ansi-term = "0.50.3"
num-traits = "0.2.19"
oauth2 = "4.4.2"
open = "5.3.2"
parse-display = "0.10.0"
pulldown-cmark = "0.13.0"
pulldown-cmark-to-cmark = "11.0.2"
ratatui = { version = "0.29", default-features = false, features = [
  "crossterm",
] }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
  "rustls-tls-native-roots",
  "gzip",
  "brotli",
  "deflate",
] }
ring = "0.17.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
shlex = "1.3.0"
similar = "2"
slog = "2"
slog-async = "2"
slog-scope = "4"
slog-stdlog = "4"
slog-term = "2"
tabled = { version = "0.20.0", features = ["ansi"] }
tabwriter = "1.4.1"
tempfile = "3.19.1"
terminal_size = "0.4.3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.28"
toml = "0.9.7"
toml_edit = "0.23.6"
unicode-segmentation = "1.12.0"
url = "2.5.4"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
version-compare = "0.2.0"
viuer = { version = "0.9.2", features = ["print-file"] }

[build-dependencies]
built = "0.8"

[dev-dependencies]
expectorate = "1.2.0"
futures = "0.3"
pretty_assertions = "1"
serial_test = "3.2.0"
tempfile = "3.19.1"
test-context = "0.4.1"

[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
debug = 0

[profile.release]
incremental = true
# Set this to 1 or 2 to get more useful backtraces in debugger.
debug = 0

# [patch.crates-io]
# kcl-lib = { path = "../modeling-app/rust/kcl-lib" }
