[package]
name = "zoo"
version = "0.2.181"
edition = "2024"
rust-version = "1.95"
build = "build.rs"

[workspace]
members = ["cli-macro", "cli-macro-impl"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
async-trait = "0.1.88"
base64 = "0.22.1"
camino = "1.2.4"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
clap = { version = "4.6.1", features = [
  "cargo",
  "derive",
  "env",
  "unicode",
  "help",
  "wrap_help",
] }
clap_complete = { version = "4.6.5" }
cli-macro = { path = "cli-macro" }
colored_json = "5.0"
crossterm = { version = "0.29", features = ["event-stream"] }
data-encoding = "2.11.0"
dialoguer = "0.12.0"
dirs = "6"
futures = "0.3"
git_rev = "0.1.0"
heck = "0.5.0"
http = "1"
ignore = "0.4"
image = { version = "0.25", default-features = false, features = [
  "png",
  "jpeg",
] }
itertools = "0.15.0"
kcl-error = "=0.2.168"
kcl-lib = { version = "=0.2.168", features = ["disable-println"] }
kcl-test-server = "=0.2.168"
kittycad = { version = "0.4.12", features = [
  "clap",
  "tabled",
  "requests",
  "retry",
] }
kittycad-modeling-cmds = { version = "0.2.209", features = [
  "websocket",
  "tabled",
] }
log = "0.4.30"
miette = { version = "7.5.0", features = ["fancy"] }
nu-ansi-term = "0.50.3"
num-traits = "0.2.19"
oauth2 = "4.4.2"
open = "5.3.5"
parse-display = "0.11.0"
pulldown-cmark = "0.13.4"
pulldown-cmark-to-cmark = "22.0.0"
ratatui = { version = "0.30", default-features = false, features = [
  "crossterm",
] }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
  "rustls-tls-native-roots",
  "gzip",
  "brotli",
  "deflate",
] }
ring = "0.17.14"
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
shlex = "2.0.1"
similar = "3"
slog = "2"
slog-async = "2"
slog-scope = "4"
slog-stdlog = "4"
slog-term = "2"
tabled = { version = "0.21.0", features = ["ansi"] }
tabwriter = "1.4.1"
tempfile = "3.27.0"
tar = "0.4"
terminal_size = "0.4.4"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.29"
toml = "1.1.0"
toml_edit = "0.25.8"
unicode-segmentation = "1.13.2"
url = "2.5.4"
uuid = { version = "1.23.2", features = ["serde", "v4"] }
version-compare = "0.2.1"
viuer = { version = "0.11.0", features = ["print-file"] }

[build-dependencies]
built = "0.7"

[dev-dependencies]
expectorate = "1.2.0"
futures = "0.3"
pretty_assertions = "1"
serial_test = "3.5.0"
tempfile = "3.27.0"
test-context = "0.5.8"

[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
debug = 0

[profile.release]
incremental = true
# Set this to 1 or 2 to get more useful backtraces in debugger.
debug = 0

[patch.crates-io]
kcl-lib = { git = "https://github.com/KittyCAD/modeling-app", rev = "16dee6595e8585a4aeaddcde435cda2d85b489ed" }
kcl-test-server = { git = "https://github.com/KittyCAD/modeling-app", rev = "16dee6595e8585a4aeaddcde435cda2d85b489ed" }
kittycad-modeling-cmds = { git = "https://github.com/KittyCAD/modeling-api", rev = "41eb579f216f8bd827fdb45b116de7719139597f" }
