[package]
name = "cli-macro-impl"
description = "Macro for our CLI generation"
version = "0.1.0"
authors = ["Jess Frazelle <jess@zoo.dev>"]
edition = "2018"

[dependencies]
Inflector = "^0.11.4"
anyhow = "1"
openapitor = { git = "https://github.com/KittyCAD/kittycad.rs", branch = "main" }
openapiv3 = "2"
proc-macro2 = "1"
quote = "1"
regex = "1.11"
rustfmt-wrapper = "^0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_tokenstream = "0.2.2"
syn = { version = "2.0", features = [ "derive", "parsing", "printing" ] }

[dev-dependencies]
expectorate = "1"
